--- a/css/style.css
+++ b/css/style.css
@@ -36,8 +36,11 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
     direction: rtl !important;
 }
 .back-to-top {
-    position: fixed;
     display: none;
+    
+}
+.side-items{
+    position: fixed;
     right: 45px;
     bottom: 45px;
     z-index: 99;
